implemented skills section and work experience timeline

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                         </div>
                     </div>
                 </div>
+            
                 <div class="about-stats">
                     <h4 class="stat-title">My Skills</h4>
                     <div class="progress-bars">
@@ -102,6 +103,41 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <h4 class="stat-title">My Timeline</h4>
+                <div class="timeline">
+                    <div class="timeline-item">
+                        <div class="tl-icon">
+                            <i class="fas fa-briefcase"></i>
+                        </div>
+                        <p class="tl-duration">2010-present</p>
+                        <h5>Web Developer <span>-Vircroosft</span></h5>
+                        <p>asdfasf sadf lskjdf lkajsdlfkj lsadjfl jasl fs</p>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="tl-icon">
+                            <i class="fas fa-briefcase"></i>
+                        </div>
+                        <p class="tl-duration">2010-present</p>
+                        <h5>Web Developer <span>-Vircroosft</span></h5>
+                        <p>asdfasf sadf lskjdf lkajsdlfkj lsadjfl jasl fs</p>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="tl-icon">
+                            <i class="fas fa-briefcase"></i>
+                        </div>
+                        <p class="tl-duration">2010-present</p>
+                        <h5>Web Developer <span>-Vircroosft</span></h5>
+                        <p>asdfasf sadf lskjdf lkajsdlfkj lsadjfl jasl fs</p>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="tl-icon">
+                            <i class="fas fa-briefcase"></i>
+                        </div>
+                        <p class="tl-duration">2010-present</p>
+                        <h5>Web Developer <span>-Vircroosft</span></h5>
+                        <p>asdfasf sadf lskjdf lkajsdlfkj lsadjfl jasl fs</p>
                     </div>
                 </div>
             </div>
