--- a/index.html
+++ b/index.html
@@ -142,7 +142,30 @@
                 </div>
             </div>
         </section>
-        <section class="section sec3 portfolio" id="portfolio"></section>
+        <section class="section sec3 portfolio" id="portfolio">
+            <div class="main-title">
+                <h2>My <span>Porfolio</span><span class="bg-text">My work</span></h2>
+            </div>
+            <p class="port-text">
+                Here is some of my work that I've done in various programming language.
+            </p>
+            <div class="portfolios">
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="#" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="#" target="blank" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section sec4 blogs" id="blogs"></section>
         <section class="section sec5 contact" id="contact"></section>
     </main>
