--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="#" alt="">
+                        <img src="img/headshot.jpg" alt="">
                     </div>
                     <div class="hover-items">
                         <h3>Project Source</h3>
@@ -166,7 +166,25 @@
                 </div>
             </div>
         </section>
-        <section class="section sec4 blogs" id="blogs"></section>
+        <section class="section sec4" id="blogs">
+            <div class="blogs-content">
+                <div class="main-title">
+                    <h2>My <span>Blogs</span><span class="bg-text">My Blogs</span></h2>
+                </div>
+                <div class="blogs">
+                    <div class="blog">
+                        <img src="img/headshot.jpg" alt="">
+                        <div class="blog-text">
+                            <h4>How to Create Your Own Website</h4>
+                            <p>
+                                Asfasdf asdf aksdf lkasjdflk jasldjf lkjasldf jlasjf.
+                                asldfjasldfjlsdflasdflsa.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section sec5 contact" id="contact"></section>
     </main>
 
