created contact section in html file

--- a/index.html
+++ b/index.html
@@ -185,7 +185,32 @@
                 </div>
             </div>
         </section>
-        <section class="section sec5 contact" id="contact"></section>
+        <section class="section sec5 contact" id="contact">
+            <div class="contact-container">
+                <div class="main-title">
+                    <h2>Contact <span>Me</span><span class="bg-text">My Blogs</span></h2>
+                </div>
+                <div class="contact-content-con">
+                    <div class="left-contact">
+                        <h4>Contact Me Here</h4>
+                        <p>
+                            asdfasdfasldfjl sadf asldjf lkajsdlkf jlas jdf lkjasl ds ls
+                            saldkfj lasdjflkjslf s
+                        </p>
+                        <div class="contact-info">
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    Location
+                                </div>
+                                <p>:Long Beach, CA</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right-contact"></div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <div class="controls">
