--- a/index.html
+++ b/index.html
@@ -206,8 +206,34 @@
                                 <p>:Long Beach, CA</p>
                             </div>
                         </div>
+                        <div class="contact-icons">
+                            <div class="contact-icon">
+                                <a href="facebook.com" target="_blank">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="right-contact"></div>
+                    <div class="right-contact">
+                        <form action="" class="contact-form">
+                            <div class="input-control i-c-2">
+                                <input type="text" required placeholder="YOUR NAME">
+                                <input type="text" required placeholder="YOUR EMAIL">
+                            </div>
+                            <div class="input-control">
+                                <input type="text" required placeholder="ENTER SUBJECT">
+                            </div>
+                            <div class="input-control">
+                                <textarea name="" id="" cols="15" rows="8" placeholder="LEAVE A MESSAGE"></textarea>
+                            </div>
+                            <div class="submit-btn">
+                                <a href="#" class="main-btn">
+                                    <span class="btn-text">Download CV</span>
+                                    <span class="btn-icon"><i class="fas fa-download"></i></span>
+                                </a>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </section>
@@ -229,6 +255,9 @@
         <div class="control control-5" data-id="contact">
             <i class="fas fa-envelope-open"></i>
         </div>
+    </div>
+    <div class="theme-btn">
+        <i class="fas fa-adjust"></i>
     </div>
     <script src="app.js"></script>
 
