--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <i class="fas fa-briefcase"></i>
                         </div>
                         <p class="tl-duration">2010-present</p>
-                        <h5>Web Developer <span>-Vircroosft</span></h5>
+                        <h5>Web Developer <span>- HackForLA</span></h5>
                         <p>asdfasf sadf lskjdf lkajsdlfkj lsadjfl jasl fs</p>
                     </div>
                     <div class="timeline-item">
@@ -120,7 +120,7 @@
                             <i class="fas fa-briefcase"></i>
                         </div>
                         <p class="tl-duration">2010-present</p>
-                        <h5>Web Developer <span>-Vircroosft</span></h5>
+                        <h5>College Technology Aide <span>-Long Beach Unified School District</span></h5>
                         <p>asdfasf sadf lskjdf lkajsdlfkj lsadjfl jasl fs</p>
                     </div>
                     <div class="timeline-item">
@@ -128,7 +128,7 @@
                             <i class="fas fa-briefcase"></i>
                         </div>
                         <p class="tl-duration">2010-present</p>
-                        <h5>Web Developer <span>-Vircroosft</span></h5>
+                        <h5>Administrative Intern <span>- City of Santa Monica</span></h5>
                         <p>asdfasf sadf lskjdf lkajsdlfkj lsadjfl jasl fs</p>
                     </div>
                     <div class="timeline-item">
