add resume document and image to homepage

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/headshot.jpg" alt="">
+                    <img src="img/david.png" alt="">
                 </div>
             </div>
             <div class="right-header">
@@ -31,7 +31,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis sed aut!
                 </p>
                 <div class="btn-con">
-                    <a href="" class="main-btn">
+                    <a href="img/DavidSanResume.pdf" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -57,7 +57,7 @@
                             Harum non necessitatibus deleniti eum soluta.
                         </p>
                         <div class="btn-con">
-                            <a href="" class="main-btn">
+                            <a href="img/DavidSanResume.pdf" class="main-btn">
                                 <span class="btn-text">Download CV</span>
                                 <span class="btn-icon"><i class="fas fa-download"></i></span>
                             </a>
@@ -97,7 +97,43 @@
                         <div class="progress-bar">
                             <p class="prog-title">html5</p>
                             <div class="progress-con">
-                                <p class="prog text">90%</p>
+                                <p class="prog text">80%</p>
+                                <div class="progress">
+                                    <span class="html"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="progress-bar">
+                            <p class="prog-title">CSS</p>
+                            <div class="progress-con">
+                                <p class="prog text">80%</p>
+                                <div class="progress">
+                                    <span class="html"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="progress-bar">
+                            <p class="prog-title">Javascript</p>
+                            <div class="progress-con">
+                                <p class="prog text">80%</p>
+                                <div class="progress">
+                                    <span class="html"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="progress-bar">
+                            <p class="prog-title">Python</p>
+                            <div class="progress-con">
+                                <p class="prog text">80%</p>
+                                <div class="progress">
+                                    <span class="html"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="progress-bar">
+                            <p class="prog-title">SQL</p>
+                            <div class="progress-con">
+                                <p class="prog text">80%</p>
                                 <div class="progress">
                                     <span class="html"></span>
                                 </div>
@@ -111,33 +147,47 @@
                         <div class="tl-icon">
                             <i class="fas fa-briefcase"></i>
                         </div>
-                        <p class="tl-duration">2010-present</p>
-                        <h5>Web Developer <span>- HackForLA</span></h5>
-                        <p>asdfasf sadf lskjdf lkajsdlfkj lsadjfl jasl fs</p>
+                        <div class="timeline-text">
+                            <p class="tl-duration">2010-present</p>
+                            <h5>Front-end Developer <span>- HackForLA</span></h5>
+                            <p>asdfasf sadf lskjdf lkajsdlfkj lsadjfl jasl fs</p>
+                        </div>
+                        
                     </div>
                     <div class="timeline-item">
                         <div class="tl-icon">
                             <i class="fas fa-briefcase"></i>
                         </div>
-                        <p class="tl-duration">2010-present</p>
-                        <h5>College Technology Aide <span>-Long Beach Unified School District</span></h5>
-                        <p>asdfasf sadf lskjdf lkajsdlfkj lsadjfl jasl fs</p>
+                        <div class="timeline-text">
+                            <p class="tl-duration">March 2017-June 2017</p>
+                            <h5>College Technology Aide <span>-Long Beach Unified School District</span></h5>
+                            <p>Collected and gathered data for proper documentation of technical known issues received through ticketing system (e-ticket software)</p>
+                            <p>Conduct  assessment of technology issues; identify and resolve problems or refer if necessary. </p>
+                        </div>   
                     </div>
                     <div class="timeline-item">
                         <div class="tl-icon">
                             <i class="fas fa-briefcase"></i>
                         </div>
-                        <p class="tl-duration">2010-present</p>
-                        <h5>Administrative Intern <span>- City of Santa Monica</span></h5>
-                        <p>asdfasf sadf lskjdf lkajsdlfkj lsadjfl jasl fs</p>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="tl-icon">
-                            <i class="fas fa-briefcase"></i>
+                        <div class="timeline-text">
+                            <p class="tl-duration">May 2016- August 2016</p>
+                            <h5>Administrative Intern <span>- City of Santa Monica</span></h5>
+                            <p>
+                                Provides administrative support to a City department, division, function, and/or special project 
+                            </p>
+                            <p>
+                                Gathers, compile, and conducts analysis of data for departmental studies and projects
+                            </p>
+                            <p>
+                                Research and interpret complex technical information 
+                            </p>
+                            <p>
+                                Prepared charts, tables, diagram, and maintains applicable records and files, as assigned
+                            </p>
+                            <p>
+                                Assisted in standardizing over 2,000 data in Street and Fleet Division's database system
+                            </p>
                         </div>
-                        <p class="tl-duration">2010-present</p>
-                        <h5>Web Developer <span>-Vircroosft</span></h5>
-                        <p>asdfasf sadf lskjdf lkajsdlfkj lsadjfl jasl fs</p>
                     </div>
                 </div>
             </div>
