updated social media links

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         </section>
         <section class="section sec3 portfolio" id="portfolio">
             <div class="main-title">
-                <h2>My <span>Porfolio</span><span class="bg-text">My work</span></h2>
+                <h2>My <span>Portfolio</span><span class="bg-text">My work</span></h2>
             </div>
             <p class="port-text">
                 Here is some of my work that I've done in various programming language.
@@ -258,10 +258,20 @@
                         </div>
                         <div class="contact-icons">
                             <div class="contact-icon">
-                                <a href="facebook.com" target="_blank">
-                                    <i class="fab fa-facebook-f"></i>
+                                <a href="https://www.linkedin.com/in/davidsan13
+                                " target="_blank">
+                                    <i class="fab brands fa-linkedin-in"></i>
+                                </a>
+                                <a href="https://github.com/davidsan13
+                                " target="_blank">
+                                    <i class="fab brands fa-github"></i>
+                                </a>
+                                <a href="www.linkedin.com/in/davidsan13
+                                " target="_blank">
+                                    <i class="fab brands fa-linkedin-in"></i>
                                 </a>
                             </div>
+                            
                         </div>
                     </div>
                     <div class="right-contact">
@@ -278,8 +288,8 @@
                             </div>
                             <div class="submit-btn">
                                 <a href="#" class="main-btn">
-                                    <span class="btn-text">Download CV</span>
-                                    <span class="btn-icon"><i class="fas fa-download"></i></span>
+                                    <span class="btn-text">Submit</span>
+                                    
                                 </a>
                             </div>
                         </form>
